--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,23 +10,22 @@ android {
         applicationId "testsample.altvr.com.testsample"
         minSdkVersion 21
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        versionCode 2
+        versionName "2.0"
     }
     signingConfigs {
         release {
-//            storeFile file(properties.getProperty("signing.storeFile"))
-//            storePassword properties.getProperty("signing.storePassword")
-//            keyAlias properties.getProperty("signing.keyAlias")
-//            keyPassword properties.getProperty("signing.keyPassword")
+            storeFile file(properties.getProperty("signing.storeFile"))
+            storePassword properties.getProperty("signing.storePassword")
+            keyAlias properties.getProperty("signing.keyAlias")
+            keyPassword properties.getProperty("signing.keyPassword")
         }
     }
     buildTypes {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            //signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
         }
         debug
                 {
@@ -44,7 +43,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -52,13 +50,18 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.retrofit:converter-jackson:1.9.0'
     compile 'org.greenrobot:eventbus:3.0.0'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2') {
-        // Necessary to avoid version conflicts
-        exclude group: 'com.android.support', module: 'appcompat'
-        exclude group: 'com.android.support', module: 'support-v4'
+    testCompile 'junit:junit:4.12'
+    testCompile('com.squareup.assertj:assertj-android:1.0.0') {
         exclude group: 'com.android.support', module: 'support-annotations'
-        exclude module: 'recyclerview-v7'
     }
+    testCompile('com.squareup.assertj:assertj-android-recyclerview-v7:1.0.0') {
+        exclude group: 'com.android.support', module: 'recyclerview-v7'
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    testCompile 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
+
+    testCompile 'org.robolectric:robolectric:3.1.2'
+    testCompile 'org.robolectric:shadows-support-v4:3.0'
+    testCompile "org.mockito:mockito-core:1.10.19"
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
 }
